// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateGrowthLineLayout > snapshot de geometria — 4 degraus 1`] = `
{
  "points": "10,70 40,70 40,55 70,55 70,40 100,40 100,25 130,25 130,10",
  "viewBox": "0 0 140 80",
}
`;

exports[`generateNodeBranchLayout > snapshot de geometria — anchor=corner produz layout diferente de field 1`] = `
{
  "d": "M 12,188 L 40.28,159.72 M 40.28,159.72 L 40.28,119.72 M 40.28,119.72 L 12,91.44 M 12,91.44 A 40,40 0 0 1 12,34.87 M 40.28,119.72 L 68.56,91.44 M 68.56,91.44 A 40,40 0 0 0 68.56,34.87 M 40.28,159.72 L 80.28,159.72 M 80.28,159.72 L 108.56,131.44 M 108.56,131.44 A 40,40 0 0 1 165.13,131.44 M 80.28,159.72 L 108.56,188 M 108.56,188 A 40,40 0 0 0 165.13,188",
  "viewBox": "0 0 200 200",
}
`;

exports[`generateNodeBranchLayout > snapshot de geometria — density=default, anchor=field 1`] = `
{
  "d": "M 40,170 L 40,130 M 40,130 L 11.72,101.72 M 11.72,101.72 L 11.72,61.72 M 11.72,61.72 A 40,40 0 0 1 51.72,21.72 M 40,130 L 68.28,101.72 M 68.28,101.72 L 68.28,61.72 M 68.28,61.72 A 40,40 0 0 0 28.28,21.72 M 68.28,101.72 L 108.28,101.72 M 108.28,101.72 A 40,40 0 0 1 148.28,141.72 M 150,60 L 178.28,31.72",
  "viewBox": "0 0 200 200",
}
`;
